Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 4.201 devel

****  Verilated signals now use VlWide and VlPacked in place of C arrays.


* Verilator 4.200 2021-03-12

**    Add simulation context (VerilatedContext) to allow multiple fully independent
      models to be in the same process. Please see the updated examples. (#2660)

**    Add context->time() and context->timeInc() API calls, to set simulation time.
      These now are recommended in place of the legacy sc_time_stamp().

****  Converted Asciidoc documentation into reStructuredText (RST) format.

****  --inhibit-sim is planned for deprecation, file a bug if this is still being used.

****  Fix range inheritance on port without data type (#2753). [Embedded Go]

****  Fix slice-assign overflow (#2803) (#2811). [David Turner]

****  Fix interface array connection ordering broken in v4.110 (#2827). [Don Owen]

****  Fix or-reduction on different scopes broken in 4.110 (#2828). [Yinan Xu]

****  Fix MSVC++ compile error. (#2831) (#2833) [Drew Taussig]


* Verilator 4.110 2021-02-25

***   Optimize bit operations and others (#2186) (#2632) (#2633) (#2751) (#2800) [Yutetsu TAKATSUKASA]

****  Support concat selection (#2721).

****  Support struct scopes when dumping structs to VCD (#2776) [Alex Torregrosa]

****  Generate SELRANGE for potentially unreachable code (#2625) (#2754) [Pierre-Henri Horrein]

****  For --flatten, override inlining of public and no_inline modules (#2761) [James Hanlon]

****  Fix little endian interface pin swizzling (#2475). [Don Owen]

****  Fix range inheritance on port without data type (#2753). [Embedded Go]

****  Fix TIMESCALE warnings on primitives (#2763). [Xuanqi]

****  Fix to exclude strings from toggle coverage (#2766) (#2767) [Paul Wright]

****  Fix $fread extra semicolon inside statements. [Leendert van Doorn]

****  Fix class extends with VM_PARALLEL_BUILDS (#2775). [Iru Cai]
