@@ -6,6 +6,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Verilated signals now use VlWide and VlPacked in place of C arrays.
 
+****  Fix class unpacked-array compile error (#2774). [Iru Cai]
+
 
 * Verilator 4.200 2021-03-12
 
